syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeymanagerRest";
option objc_class_prefix = "HLW";

import "google/protobuf/timestamp.proto";
package br.com.zup;

service RegistrarNovaChavePixService {
  rpc registrar(NovaChavePixRequest) returns (NovaChavePixResponse) {}
}

service RemoveChavePixService {
  rpc remover(ChavePixRequest) returns (MensagemRemocaoResponse) {}
}

service DetalhaChavePixService {
  rpc detalhar(DetalhaChavePixRequest) returns (DetalhamentoPixResponse) {}
}

service ListaChavesPixService {
  rpc listar(ClientePixRequest) returns (ListaDeChavesPixResponse) {}
}

enum TipoChave {
  KEY_UNDEFINED = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  ACCOUNT_UNDEFINED = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message NovaChavePixRequest {
  string identificador = 1;
  TipoChave tipoChave = 2;
  string  valorChave= 3;
  TipoConta tipoConta = 4;
}

message NovaChavePixResponse {
  string clientId = 1;
  string pixId = 2;
}

message ChavePixRequest {
  string pixId = 1;
  string clientId = 2;
}

message MensagemRemocaoResponse {
  string mensagem = 1;
}

message DetalhaChavePixRequest{
  message DadosPixInterno {
    string clienteId = 1;
    string pixId = 2;
  }

  oneof dadosPixExterno {
    DadosPixInterno dados = 1;
    string chave = 2;
  }
}

message Conta {
  string nome = 1;
  string cpf = 2;
  string instituicao = 3;
  string agencia = 4;
  string conta = 5;
  string tipo = 6;
}

message DetalhamentoPixResponse {
  string pixId = 1;
  string clientId = 2;
  string tipoChave = 3;
  string valorChave = 4;
  Conta conta = 5;
  google.protobuf.Timestamp registradaEm = 6;
}

message ClientePixRequest {
  string identificador = 1;
}

message ListaDeChavesPixResponse {

  message ChavePix{
    string pixId = 1;
    string clienteId = 2;
    string tipoChave = 3;
    string valorChave = 4;
    string tipoConta = 5;
    google.protobuf.Timestamp criadaEm = 6;
  }

  repeated ChavePix chavePix = 1;
}